# fussim

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  build_wheel.bat  index.html  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  generate_index_pages.py  publish.yml
.github/workflows/cuda/: Linux-env.sh  Linux.sh  Windows-env.sh  Windows.sh
benchmarks/: baseline_results.json  benchmark.py  benchmark_compare.py  benchmark_comprehensive.py  benchmark_detailed.py  benchmark_sigma.py  ldg_optimized_results.json
csrc/: ext.cpp  ssim.cu  ssim.h  ssim_fp16.cu  ssim_fp16.h
docs/: index.html
fused_ssim/: __init__.py
fussim/: __init__.py
scripts/: install.py
tests/: __init__.py  conftest.py  test_amp.py  test_compat.py  test_comprehensive.py  test_equivalence.py  test_performance.py  test_ssim.py  test_window_sizes.py
whl/fussim/: index.html
whl/pt210cu126/fussim/: index.html
whl/pt210cu128/fussim/: index.html
whl/pt210cu130/fussim/: index.html
whl/pt25cu118/fussim/: index.html
whl/pt25cu121/fussim/: index.html
whl/pt25cu124/fussim/: index.html
whl/pt26cu118/: index.html
whl/pt26cu118/fussim/: index.html
whl/pt26cu124/fussim/: index.html
whl/pt26cu126/fussim/: index.html
whl/pt27cu118/fussim/: index.html
whl/pt27cu126/fussim/: index.html
whl/pt27cu128/fussim/: index.html
whl/pt28cu126/fussim/: index.html
whl/pt28cu128/fussim/: index.html
whl/pt29cu126/fussim/: index.html
whl/pt29cu128/fussim/: index.html
whl/pt29cu130/fussim/: index.html
