[build-system]
requires = ["setuptools>=61.0", "wheel", "torch>=2.5", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "fussim"
dynamic = ["version"]
description = "Optimized CUDA implementation of differentiable SSIM for PyTorch"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Janusch Patas" }
]
keywords = [
    "ssim",
    "structural-similarity",
    "pytorch",
    "cuda",
    "deep-learning",
    "image-quality",
    "differentiable",
    "gaussian-splatting",
    "3dgs",
    "nerf",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Environment :: GPU :: NVIDIA CUDA",
]
dependencies = [
    "torch>=2.5",
]

[project.urls]
Homepage = "https://github.com/OpsiClear/fussim"
Repository = "https://github.com/OpsiClear/fussim"
Issues = "https://github.com/OpsiClear/fussim/issues"
Documentation = "https://github.com/OpsiClear/fussim#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytorch-msssim",
    "pre-commit>=4.0",
    "ruff>=0.9",
]
test = [
    "pytest>=7.0",
    "pytorch-msssim",
]

[project.scripts]
fussim-check = "fussim:_cli_check"

[tool.setuptools]
packages = ["fussim"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "fussim.__version__"}

[tool.setuptools.package-data]
"*" = ["*.cu", "*.cpp", "*.h"]
"fussim" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["fussim"]
